add host details api
