# auth-service/api/hosts/controller/v1/host.controller.go
@@ -1,21 +1,22 @@
 package authV1
 
 import (
+	"fmt"
 	"github.com/gin-gonic/gin"
-	"github.com/make-my-event/auth-service/api/auth/dto"
-	"github.com/make-my-event/auth-service/api/auth/models"
-	"github.com/make-my-event/auth-service/api/auth/service"
+	"github.com/make-my-event/auth-service/api/hosts/dto"
+	"github.com/make-my-event/auth-service/api/hosts/models"
+	"github.com/make-my-event/auth-service/api/hosts/service"
 	"github.com/make-my-event/auth-service/common/helper"
 	"net/http"
 )
 
-type AuthController struct {
-	authService service.AuthService
+type HostController struct {
+	hostService service.HostService
 }
 
-func NewAuthController(authService service.AuthService) AuthController {
-	return AuthController{
-		authService: authService,
+func NewHostController(authService service.HostService) HostController {
+	return HostController{
+		hostService: authService,
 	}
 }
 
@@ -30,14 +31,14 @@ func NewAuthController(authService service.AuthService) AuthController {
 // @Failure      400 {object} helper.Response{status=boolean,message=string,errors=[]string,data=object} "desc"
 // @Failure      500
 // @Router       /register [post]
-func (controller AuthController) Register(ctx *gin.Context) {
+func (controller HostController) Register(ctx *gin.Context) {
 	var body dto.HostRegisterRequest
 	if err := ctx.ShouldBind(&body); err != nil {
 		response := helper.BuildErrorResponse("Failed to process the request", err.Error(), nil)
 		ctx.AbortWithStatusJSON(http.StatusBadRequest, response)
 		return
 	}
-	currentHost, err := controller.authService.FindByEmail(body.Email)
+	currentHost, err := controller.hostService.FindByEmail(body.Email)
 	if err != nil {
 		response := helper.BuildErrorResponse("Failed to find the email", err.Error(), nil)
 		ctx.AbortWithStatusJSON(http.StatusInternalServerError, response)
@@ -47,7 +48,7 @@ func (controller AuthController) Register(ctx *gin.Context) {
 		ctx.AbortWithStatusJSON(http.StatusBadRequest, response)
 		return
 	}
-	token, expireAt, err := controller.authService.RegistrationHost(body)
+	token, expireAt, err := controller.hostService.RegistrationHost(body)
 	if err != nil {
 		response := helper.BuildErrorResponse("Failed to register", err.Error(), nil)
 		ctx.AbortWithStatusJSON(http.StatusInternalServerError, response)
@@ -69,11 +70,11 @@ func (controller AuthController) Register(ctx *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param		 reqeust body dto.HostLoginRequest true "Login Host"
-// @Success      201 {object} helper.Response{status=boolean,message=string,errors=[]string,data=object{token=string,expire_at=int64}} "desc"
+// @Success      200 {object} helper.Response{status=boolean,message=string,errors=[]string,data=object{token=string,expire_at=int64}} "desc"
 // @Failure      400 {object} helper.Response{status=boolean,message=string,errors=[]string,data=object} "desc"
 // @Failure      500
 // @Router       /login [post]
-func (controller AuthController) Login(ctx *gin.Context) {
+func (controller HostController) Login(ctx *gin.Context) {
 	var body dto.HostLoginRequest
 	if err := ctx.ShouldBind(&body); err != nil {
 		response := helper.BuildErrorResponse("Failed to process the request", err.Error(), nil)
@@ -81,7 +82,7 @@ func (controller AuthController) Login(ctx *gin.Context) {
 		return
 	}
 
-	token, expireAt, isPasswordMatched, loginErr := controller.authService.LoginHost(body)
+	token, expireAt, isPasswordMatched, loginErr := controller.hostService.LoginHost(body)
 	if loginErr != nil {
 		response := helper.BuildErrorResponse("Failed to Login", loginErr.Error(), nil)
 		ctx.AbortWithStatusJSON(http.StatusInternalServerError, response)
@@ -101,10 +102,32 @@ func (controller AuthController) Login(ctx *gin.Context) {
 
 }
 
-func (controller AuthController) Me(ctx *gin.Context) {
-	response := gin.H{
-		"message": "me Endpoint",
+// login hosts godoc
+// @Summary      Get Host Details
+// @Schemes
+// @Tags         Auth
+// @Security Authorization
+// @name Authorization
+// @Accept       json
+// @Produce      json
+// @Success      200 {object} helper.Response{status=boolean,message=string,errors=[]string,data=object{name=string,email=string}} "desc"
+// @Failure      400 {object} helper.Response{status=boolean,message=string,errors=[]string,data=object} "desc"
+// @Failure      500
+// @Router       /me [get]
+func (controller HostController) Me(ctx *gin.Context) {
+	fmt.Println("called")
+	user, isExists := ctx.Get("user")
+	if !isExists {
+		response := helper.BuildErrorResponse("Unauthenticated", "Invalid token", nil)
+		ctx.AbortWithStatusJSON(http.StatusUnauthorized, response)
+		return
 	}
-	ctx.JSON(200, response)
+	host := user.(models.Host)
+	response := helper.BuildResponse(true, "Authorized", gin.H{
+		"name":  host.Name,
+		"email": host.Email,
+	})
+	ctx.JSON(http.StatusOK, response)
 	return
+
 }
